# Kol

./: .gitignore  .gitmodules  README.md  VOICE_ASSISTANT_REVIEW_QUESTIONS.md  build.gradle  gradle.properties  kol-roadmap.md  settings.gradle  skills-lock.json
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-android.cpp
app/src/main/java/org/kol/: ModelConfig.kt  ModelDownloader.kt  VoiceAssistantEngine.kt
app/src/main/java/org/kol/ai/: RuntimeProviders.kt
app/src/main/java/org/kol/audio/: AudioCapture.kt  AudioPlayer.kt  VadDetector.kt
app/src/main/java/org/kol/llm/: GemmaLiteRtInference.kt  LiteRtNativeLoader.kt  LlamaInference.kt  SentenceBatcher.kt
app/src/main/java/org/kol/stt/: WhisperSTT.kt  WhisperTranscriber.kt
app/src/main/java/org/kol/tts/: MultilingualTTS.kt  (+2 more)
app/src/main/res/color/: ic_launcher_background.xml
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_phone_foreground.xml  kol_card_background.xml  kol_chip_background.xml  kol_chip_error.xml  kol_logo_mark.xml  kol_panel_background.xml  kol_pill_outline.xml  kol_pill_primary.xml  kol_screen_background.xml  kol_voice_bubble.xml
app/src/main/res/layout/: activity_main.xml  activity_setup.xml  item_chat_bubble.xml  item_file_progress.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
main/com/llama/llamastack/client/local/: InferenceServiceLocalImpl.kt  LlamaStackClientClientLocalImpl.kt  LlamaStackClientLocalClient.kt  LocalClientOptions.kt
scripts/: build-llama-android-arm64.sh  build-sherpa-onnx-arm64.sh
(+10 files in other folders)
